# cascade

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.portainer.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cascade/: app.py  config.py  db.py  hook.py  library.py  movies.py  scheduler.py  search.py  series.py  tmdb.py
cascade/static/: index.html
docs/: HOOKS.md  SETUP.md  screenshot-activity.png.txt  screenshot-events.png.txt  screenshot-search.png.txt
faucet/: app.py  auth.py  auth_routes.py  db.py  fixmatch.py  importer.py  library.py  scheduler.py  sort.py  sweep.py
faucet/clients/: transmission.py
faucet/static/: index.html
tests/: test_cascade.py  test_faucet.py
